# Ataraxia

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE
.github/workflows/: cmake-multi-platform.yml
demo/: CMakeLists.txt
demo/data/: mainmenu.scene  test.scene
demo/src/: enemy.cpp  enemy.h  game.cpp  game.h  player.cpp  player.h
engine/: CMakeLists.txt
engine/include/: actor.h  application.h  camera.h  config.h  core_manager.h  entrypoint.h  logger.h  matrix.h  matrix_inl.h  matrix_transform.h  point.h  rect.h  scene.h  vector.h  vector2.h  vector2_inl.h  vector3.h  vector3_inl.h  vector_inl.h
engine/src/: actor.cpp  application.cpp  camera.cpp  console.cpp  console.h  console_renderer.cpp  console_renderer.h  core_manager.cpp  frame_buffer.cpp  frame_buffer.h  input.cpp  input.h  input_action.cpp  input_action.h  input_handler.cpp  input_handler.h  input_handler_linux.cpp  input_handler_windows.cpp  input_linux.cpp  input_manager.cpp  input_manager.h  input_windows.cpp  logger.cpp  main.cpp  render_manager.cpp  render_manager.h  renderer.cpp  renderer.h  scene.cpp  scene_manager.cpp  scene_manager.h  scene_parser.cpp  scene_parser.h  singleton.h
engine/tests/: CMakeLists.txt  matrix.cc  test.cc  vector.cc
src/: main.cpp
